--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
 minversion=1.6.0
-envlist=py26,py27,py33
+envlist=py26,py27,py33,pypy
 
 [testenv]
-commands=py.test tests/client_tests.py
+commands=py.test tests/client_tests.py -v
 deps=
 	pytest
 	beautifulsoup4
 	httmock
-	twisted
-	autobahn
-	requests
-	six
+    twisted
