--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,11 @@ minversion=1.6.0
 envlist=py26,py27,py33,pypy
 
 [testenv]
-commands=py.test tests/client_tests.py -v
+commands=py.test
 deps=
 	pytest
 	beautifulsoup4
 	httmock
-    twisted
+
+[pytest]
+addopts=-v --strict --tb=short
