Refactored to properly support pull

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,14 @@ deps=
 	beautifulsoup4
 	httmock
 
+
+[testenv:py26]
+commands=py.test
+deps=
+    pytest
+    beautifulsoup4
+    httmock
+    unittest2
+
 [pytest]
 addopts=-v --strict --tb=short
