Put coverage into tox, added test to set up livestreaming client

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=1.6.0
-envlist=py26,py27,py33,pypy
+envlist=py26,py27-coverage,py33,pypy
 
 [testenv]
 commands=py.test
@@ -20,3 +20,12 @@ deps=
 
 [pytest]
 addopts=-v --strict --tb=short
+
+[testenv:py27-coverage]
+basepython=python2.7
+commands=
+    coverage run --source datasift -m py.test
+deps=
+    {[testenv]deps}
+    coverage
+
