--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
-secure: "HzmolKuLpIOFjzgsLYR54ShiHSTqCMB4m7IXtKhdpim/eJ1jbLzIYtkxhHw5GoL+SmZrgirUrpyyIeCTgqTfSj7S9OFY+NZTYM+DIZZ/IDtXxcOo1bD/kf6xcptZhjO4D0I41MG9bfZZpXuJ3g8iNV/IoguvAGqha8cPuN+gRc4="
 language: python
 python: 2.7
 env:
-    - TOX_ENV=py26
-    - TOX_ENV=py27
-    - TOX_ENV=py32
-    - TOX_ENV=py33
-    - TOX_ENV=pypy
+    global:
+        - secure: "HzmolKuLpIOFjzgsLYR54ShiHSTqCMB4m7IXtKhdpim/eJ1jbLzIYtkxhHw5GoL+SmZrgirUrpyyIeCTgqTfSj7S9OFY+NZTYM+DIZZ/IDtXxcOo1bD/kf6xcptZhjO4D0I41MG9bfZZpXuJ3g8iNV/IoguvAGqha8cPuN+gRc4="
+    matrix:
+        - TOX_ENV=py26
+        - TOX_ENV=py27
+        - TOX_ENV=py32
+        - TOX_ENV=py33
+        - TOX_ENV=pypy
 
 script:
     - tox -e $TOX_ENV
