--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
         - TOX_ENV=py26
         - TOX_ENV=py27
         - TOX_ENV=py33
+        - TOX_ENV=py34
         - TOX_ENV=pypy
 
 script:
