added py34 for testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=1.6.0
-envlist=py26,py27-coverage,py33,pypy
+envlist=py26,py27-coverage,py33,py34,pypy
 
 [testenv]
 commands=py.test
