--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: python
 python: 2.7
 env:
-    global:
-        - secure: "HzmolKuLpIOFjzgsLYR54ShiHSTqCMB4m7IXtKhdpim/eJ1jbLzIYtkxhHw5GoL+SmZrgirUrpyyIeCTgqTfSj7S9OFY+NZTYM+DIZZ/IDtXxcOo1bD/kf6xcptZhjO4D0I41MG9bfZZpXuJ3g8iNV/IoguvAGqha8cPuN+gRc4="
-    matrix:
-        - TOX_ENV=py26
-        - TOX_ENV=py27
-        - TOX_ENV=py33
-        - TOX_ENV=pypy
-
+  global:
+  - secure: uCajy1mT1Rk5vzco8hkuRTU+0QlFg1crOyw71bMkTzgzz32Pr+B8F0GOjjxcOB0ZQzpQoVzemBasskOCEejWzJvR7Hm+MO2WDcGX9HrjdPT7SeRpWldxDKU+tBADvCZXcIMiff1fZbPc+BCpwmZPTT3goAZD9dPvNqnzh0pzO3M=
+  matrix:
+  - TOX_ENV=py26
+  - TOX_ENV=py27
+  - TOX_ENV=py33
+  - TOX_ENV=pypy
 script:
-    - tox -e $TOX_ENV
+	- tox -e $TOX_ENV
 install:
-    - pip install tox
+	- pip install tox
