--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: 2.7
 env:
   global:
-  - secure: uCajy1mT1Rk5vzco8hkuRTU+0QlFg1crOyw71bMkTzgzz32Pr+B8F0GOjjxcOB0ZQzpQoVzemBasskOCEejWzJvR7Hm+MO2WDcGX9HrjdPT7SeRpWldxDKU+tBADvCZXcIMiff1fZbPc+BCpwmZPTT3goAZD9dPvNqnzh0pzO3M=
+      secure: "jgSvgnc/9vxZp6D5U2K+6PJ+HcuHLWN71dMdAr0M+axOJWOqKGJCClOYj3OT52ztpEW93LVRvt2OxMrhzkm6tdEv6Z+7MsNPyvXJe+AUGrkLbALV9ICBQBKnNRwvnbkEtxMBffoKi986iLu+ULNhWVtVox9TkZvp7iGt1WfZoS0="
   matrix:
   - TOX_ENV=py26
   - TOX_ENV=py27
