--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 python: 2.7
+sudo: false
 env:
   global:
       secure: "jgSvgnc/9vxZp6D5U2K+6PJ+HcuHLWN71dMdAr0M+axOJWOqKGJCClOYj3OT52ztpEW93LVRvt2OxMrhzkm6tdEv6Z+7MsNPyvXJe+AUGrkLbALV9ICBQBKnNRwvnbkEtxMBffoKi986iLu+ULNhWVtVox9TkZvp7iGt1WfZoS0="
