--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=1.6.0
-envlist=py27-coverage,py33,py34,pypy
+envlist=py27,py33,py34,pypy
 
 [testenv]
 commands=py.test
@@ -9,22 +9,9 @@ deps=
 	beautifulsoup4
 	httmock
 
-
-[testenv:py26]
-commands=py.test
-deps=
-    pytest
-    beautifulsoup4
-    httmock
-    unittest2
-
 [pytest]
 addopts=-v --strict --tb=short
 
-[testenv:py27-coverage]
-basepython=python2.7
-commands=
-    coverage run --source datasift -m py.test
 deps=
     {[testenv]deps}
     coverage
