--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ env:
   global:
       secure: "jgSvgnc/9vxZp6D5U2K+6PJ+HcuHLWN71dMdAr0M+axOJWOqKGJCClOYj3OT52ztpEW93LVRvt2OxMrhzkm6tdEv6Z+7MsNPyvXJe+AUGrkLbALV9ICBQBKnNRwvnbkEtxMBffoKi986iLu+ULNhWVtVox9TkZvp7iGt1WfZoS0="
   matrix:
-  - TOX_ENV=py26
   - TOX_ENV=py27
   - TOX_ENV=py33
   - TOX_ENV=py34
+  - TOX_ENV=pypy
 script:
   - tox -e $TOX_ENV
 install:
