--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,10 @@ deps=
 [pytest]
 addopts=-v --strict --tb=short
 
+[testenv:py27-coverage]
+basepython=python2.7
+commands=
+    coverage run --source datasift -m py.test
 deps=
     {[testenv]deps}
     coverage
