--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,9 @@ addopts=-v --strict --tb=short
 
 [testenv:py27-coverage]
 basepython=python2.7
+passenv = TOXENV CI TRAVIS TRAVIS_*
 commands=
-    coverage run --source datasift -m py.test
+    codecov -e TOXENV
 deps=
     {[testenv]deps}
-    coverage
-
+    codecov>=1.4.0
