generate coverage reports

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist=py27-coverage,py33,py34,pypy
 commands=py.test
 deps=
 	pytest
+	pytest-cov
 	beautifulsoup4
 	httmock
 
@@ -17,6 +18,7 @@ basepython=python2.7
 passenv = TOXENV CI TRAVIS TRAVIS_*
 commands=
     codecov -e TOXENV
+    coverage run --source datasift -m py.test --cov=./
 deps=
     {[testenv]deps}
     codecov>=1.4.0
