use pytest-cov rather than coverage.py

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ basepython=python2.7
 passenv = TOXENV CI TRAVIS TRAVIS_*
 commands=
     codecov -e TOXENV
-    coverage run --source datasift -m py.test --cov=./
+    py.test --cov=./
 deps=
     {[testenv]deps}
     codecov>=1.4.0
