--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=1.6.0
-envlist=py27-coverage,py33,py34,pypy
+envlist=py27-coverage,py34,py35,py36,pypy
 
 [testenv]
 commands=py.test
