--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,23 @@
 language: python
-python: 2.7
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "pypy"
 sudo: false
 env:
   global:
       secure: "jgSvgnc/9vxZp6D5U2K+6PJ+HcuHLWN71dMdAr0M+axOJWOqKGJCClOYj3OT52ztpEW93LVRvt2OxMrhzkm6tdEv6Z+7MsNPyvXJe+AUGrkLbALV9ICBQBKnNRwvnbkEtxMBffoKi986iLu+ULNhWVtVox9TkZvp7iGt1WfZoS0="
-  matrix:
-  - TOX_ENV=py27-coverage
-  - TOX_ENV=py34
-  - TOX_ENV=py35
-  - TOX_ENV=py36
 script:
-  - tox -e $TOX_ENV
+  - py.test
 install:
   - pip install tox
   - pip install codecov
-after_success:
-  - codecov
+  - pip install -r requirements.txt
+  - pip install .
+#after_success:
+#  - codecov
 matrix:
   allow_failures:
     - TOX_ENV=py35
