--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 install:
   - pip install tox
   - pip install codecov
-  - pip install -r requirements.txt
+  - pip install -r test_requirements.txt
   - pip install .
 #after_success:
 #  - codecov
